<?xml version='1.0' encoding='utf-8'?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.chua</groupId>
    <artifactId>utils-support-remote-parent</artifactId>
    <version>4.0.0.42</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.chua</groupId>
        <artifactId>utils-support-parent-starter</artifactId>
        <version>4.0.0.42</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <name>Utils Support Remote Parent</name>
    <description>远控网关：协议、传输、网关、被控端、控制端</description>

    <modules>
        <module>utils-support-remote-protocol</module>
        <module>utils-support-remote-core</module>
        <module>utils-support-remote-gateway</module>
        <module>utils-support-remote-agent</module>
        <module>utils-support-remote-controller</module>
    </modules>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>
</project>
